environments/prod/kubernetes/services/support/sup-tool-access-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sup-tool-access-api
  labels:
    app: sup-tool-access-api
    env: prod
  namespace: support
spec:
  replicas: 1
  revisionHistoryLimit: 3
  template:
    metadata:
      name: sup-tool-access-api
      labels:
        app: sup-tool-access-api
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
        - name: sup-tool-access-api
          image: steblynskyi-docker.jfrog.io/sup-tool-access-api:26da3b0
          imagePullPolicy: Always
#          Uncomment this section if app has health check endpoint
#          livenessProbe:
#            failureThreshold: 3
#            httpGet:
#              port: http
#              scheme: HTTP
#            initialDelaySeconds: 20
#            periodSeconds: 10
#            successThreshold: 1
#            timeoutSeconds: 5
          resources:
            limits:
              cpu: 250m
              memory: 250Mi
          ports:
            - containerPort: 3000
              name: http
      restartPolicy: Always
  selector:
    matchLabels:
      app: sup-tool-access-api
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: 200-499
  name: sup-tool-access-api
  namespace: support
  labels:
    Domain: support-sup-tool-access-api.steblynskyi.com
spec:
  selector:
    app: sup-tool-access-api
  ports:
    - port: 80
      name: http
      targetPort: 3000
      protocol: TCP
  type: NodePort
