environments/prod/kubernetes/services/support/support-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: support-web
  labels:
    app: support-web
    env: prod
  namespace: support
spec:
  replicas: 2
  revisionHistoryLimit: 3
  template:
    metadata:
      name: support-web
      labels:
        app: support-web
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
        - name: support-web
          image: steblynskyi-docker.jfrog.io/support-web:c1318081
          imagePullPolicy: IfNotPresent
          args:
          - -base-path=/
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 8080
              name: http
      restartPolicy: Always
  selector:
    matchLabels:
      app: support-web
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: 200-499
  name: support-web
  namespace: support
  labels:
    Domain: support-web.steblynskyi.com
spec:
  selector:
    app: support-web
  ports:
    - port: 80
      name: http
      targetPort: 8080
      protocol: TCP
  type: NodePort
