environments/prod/kubernetes/services/support/SUPPORT-INGRESS-INTERNAL.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: support-ingress-internal
  namespace: support
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/tags: Environment=PROD,Name=Support-Ingress-Internal
    alb.ingress.kubernetes.io/subnets: subnet-1,subnet-2,subnet-3
    alb.ingress.kubernetes.io/security-groups: sg-1
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:123:certificate/111-222-333-444-555
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-1-2017-01
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS":443}]'
    alb.ingress.kubernetes.io/load-balancer-attributes: access_logs.s3.enabled=false,access_logs.s3.bucket=steblynskyi-prod-kube-ingress-controller-logs,access_logs.s3.prefix=support,deletion_protection.enabled=true,routing.http2.enabled=true,idle_timeout.timeout_seconds=120
spec:
  rules:
  - host: support-sup-tool-access-api.steblynskyi.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: sup-tool-access-api
          servicePort: 80
